kube/deploy/services/outline/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &n outline
  namespace: *n
spec:
  routes:
    - match: Host(`wiki.${EXTERNAL_DOMAIN}`)
      kind: Rule
      services:
        - name: *n
          port: 3000
      middlewares:
        - name: compress
          namespace: ingress
  tls:
    secretName: tls-cert-wiki.${EXTERNAL_DOMAIN}
    domains:
      - main: wiki.${EXTERNAL_DOMAIN}
